code/UI/Base/Chatbox/PlatformerChatBox.scss
@import "../../_vars.scss";
iconpanel {
    font-family: "Material Icons";
}
platformerchatbox {
    position: absolute;
    bottom: 100px;
    left: 100px;
    z-index: 80;
    flex-direction: column;
    width: 450px;
    font-family: "Nunito-Black";
    font-weight: 900;
    font-size: 16px;
    pointer-events: none;

    textentry {
        transition: all 0.1s ease;
        height: 54px;
        background-color: black;
        opacity: 0;
        color: $NearBlack;
        padding: 15px;
        background-color: $BGCream;
        border-radius: 32px;
        font-size: 18px;
        flex-shrink: 0;
        flex-grow: 0;
        width: 70%;
    }

    .sendbutton {
        transition: all 0.1s ease;
        font-family: "Material Icons";
        font-size: 25px;
        color: $BGCream;
        text-align: center;
        align-items: center;
        background-color: $BGButton;
        border-radius: 50%;
        width: 40px;
        height: 40px;
        cursor: pointer;
        opacity: 0;
        top: 46px;
    }

    .placeholder {
        color: $BGTxtFade;
    }

    .chat_canvas {
        flex-direction: column;
        align-items: flex-start;
    }

    &.open {
        pointer-events: all;

        .sendbutton {
            margin-left: 110%;
            opacity: 1;
        }

        textentry {
            opacity: 1;
            width: 120%;
        }
    }
}

platformerchatentry {
    margin-bottom: 16px;
    color: white;
    transition: all 0.1s ease-out;
    opacity: 1;
    max-height: 200px;
    flex-shrink: 0;
    flex-grow: 0;
    max-width: 100%;
    transform: scale( 1 );
    flex-direction: column;
    box-shadow: 2px 2px 20px rgba( black, 0.5 );
    border-radius: 100px;

    &:intro {
        max-height: 0px;
        padding-top: 0;
        padding-bottom: 0;
        margin-bottom: 0;
        opacity: 0;
        transform: scale( 0 );
    }

    &.faded {
        opacity: 0;
    }

    .avatar {
        width: 42px;
        height: 42px;
        min-height: 32px;
        border-radius: 100px;
        border: 2px solid white;
        position: absolute;
        left: 4px;
        top: 50%;
        transform: translateY(-50%);
        z-index: 100;
    }

    .image {
        border-radius: 100px;
    }

    .header {
        padding: 4px;
        padding-right: 16px;
        padding-left: 8px;
        background-color: #df4f54;
        border-radius: 20px 20px 0px 0px;
        text-shadow: 0px 0px 1px rgba( black, 0.3 );
    }

    .name {
        margin-left: 46px;
        padding-right: 12px;
        font-weight: 600;
        font-size: 17px;
        color: white;
        flex-shrink: 0;
    }

    .main {
        padding: 4px;
        padding-right: 16px;
        padding-left: 8px;
        background-color: white;
        border-radius: 0px 0px 20px 20px;
    }

    .message {
        margin-left: 46px;
        color: black;
        font-size: 17px;
        font-weight: bolder;
        flex-grow: 1;
    }

    &.noname .name {
        display: none;
    }

    &.noavatar image {
        display: none;
    }

    &.is-lobby {
        .name {
            color: #ff80f5;
        }
    }

    &.custom {
        .name {
            display: none;
        }
    }

    &.not-message {
        .main {
            border-radius: 20px;
            background-color: #df4f54;
        }

        .message {
            margin-left: 0px;
            color: rgba( white, 0.8 );
            text-shadow: 0px 0px 1px rgba( black, 0.5 );
        }

        .name {
            text-shadow: 0px 0px 1px rgba( black, 0.8 );
        }

        .avatar {
            left: 0px;
        }
    }


    &.not-me {
        .header {
            background-color: #3ebcba;
        }

        &.not-message {
            .main {
                background-color: #3ebcba;
            }
        }
    }
}

